Edited tailwindcss for manual theme switching

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,8 @@ body {
   --font-poppins: Poppins, "sans-serif"
 }
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @layer utilities {
   .scrollbar-thin {
     scrollbar-width: thin;
